# EPRpy

./: .buildinfo  .gitignore  CHANGELOG  EprData.html  Examples.html  LICENSE  README.md  genindex.html  index.html  installation.html  loading.html  objects.inv  plotting.html  processing.html  pyproject.toml  search.html  searchindex.js  setup.py  workflows.html
.github/workflows/: deploy-docs.yml  test-eprpy.yml  upload-to-pypi.yml
_sources/: EprData.rst.txt  Examples.rst.txt  index.rst.txt  installation.rst.txt  loading.rst.txt  plotting.rst.txt  processing.rst.txt
_sources/notebooks/: examples.ipynb.txt
_static/: documentation_options.js
docs/: .python-version
docs/source/: EprData.rst  Examples.rst  conf.py  index.rst  installation.rst  processing.rst  workflows.rst
docs/source/notebooks/: examples.ipynb
eprpy/: __init__.py  loader.py  plotter.py  processor.py  workflows.py
notebooks/: examples.html  examples.ipynb
tests/: test_eprpy.py
tests/data/: tempo.DSC  tempo.DTA  tempo_time.DSC  tempo_time.DTA  tempo_time.YGF  test_default2d_bc.npy  test_default_bc.npy  test_get_dim_array.npy  test_integral.npy  test_load_1d_epr.npy  test_load_1d_epr_x.npy  test_load_2d_epr.npy  test_load_2d_epr_x.npy  test_load_2d_epr_y.npy  test_poly2_bc.npy  test_poly2_bc_baseline.npy  test_scale_between1d-1_1.npy  test_scale_between1d_default.npy  test_scale_between2d_default.npy  test_spline_bc.npy  test_spline_bc_baseline.npy
tests/data/test_results/: readme.md
